src/test/ui/span/type-binding.stderr
error[E0220]: associated type `Trget` not found for `std::ops::Deref`
  --> $DIR/type-binding.rs:6:20
   |
LL | fn homura<T: Deref<Trget = i32>>(_: T) {}
   |                    ^^^^^^^^^^^ associated type `Trget` not found

error: aborting due to previous error

For more information about this error, try `rustc --explain E0220`.
